--- a/src/app/main-component/main-component.component.html
+++ b/src/app/main-component/main-component.component.html
@@ -1,5 +1,5 @@
 <div class="container">
     <div *ngFor="let book of cars">Available Book <br> Name:{{book.name}} <br> Writer:{{book.writer}}
     </div>
-    <button (click)="addCar()">Add Book</button>
+    <!-- <button (click)="addCar()">Add Book</button> -->
 </div>
